--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,83 +1,168 @@
 
-*{
-    margin : 0;
-    padding : 0;
-}
 
-:root{
-    --purple : #8204c5;
-    --darkPurple: #630ca6;
-}
-
-body{
-    font-family:'Times New Roman', Times, serif ; 
-}
-
-button{
-    background-color: var(--purple);
-    color:white;
-    border: none;
+html,body{
+    font-family: sans-serif;
+    height:100%;
+  }
+  
+  :root{
+    --lightPurple : #c38ff9;
+    --darkPurple : #46028f;
+  
+  }
+  #highScores div div{
     padding: 5px;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-button:hover{
-    background-color: var(--darkPurple);
-}
-
-#info{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 10px;
-}
-
-#positionWrapper{
+    font-weight:600;
+  }
+  
+  #highScores div div:nth-child(odd){
+    background-color:#efe6f9;
+  }
+  
+  #highScores button{
+    margin:5px 0;
+  }
+  
+  /* Section Specific Styles */
+  
+  #positionWrapper{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    text-align: center;
-}
-
-#quizHolder button{
+    
+  }
+  
+  section{
+    max-width: 50%;
+    margin: 0 auto;
+  }
+  
+  
+  #info{
+    max-width:980px;
+    margin: 0 auto;
+   
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 16px 30px;
+  }
+  
+  
+  #scores1{
+    /* position:absolute; */
+    /* top:16px; */
+    left:20px;
+    
+    color: var(--lightPurple);
+    background-color: white;
+  }
+  
+  #timer{
+    /* position:absolute; */
+    /* top:0; */
+    right:40px;
+  }
+  
+  #intro{
+    text-align:center;
+  }
+  
+  
+  button{
+    background-color:#41275e;
+    color:white;
+    border: none;
+    padding:5px;
+    border-radius: 5px;
+    cursor:pointer;
+  }
+  
+  #intro button:hover{
+    background-color: #613a8d;
+  }
+  
+  
+  #quizHolder #title{
+    font-weight:700;
+  }
+  
+  
+  #quizHolder button{
+    background-color:#41275e;
+    border-radius:5px;
+    color:white;
+    margin: 3px 0;
+    padding: 5px 5px ;
+    cursor:pointer;
     display: block;
     width: 100%;
     text-align: left;
-}
-
-#finish{
-    display: felx;
-    align-items: center;
-    margin-left: 10px;
-}
-
-#records{
-    display: flex;
-    align-items: center;
-    margin: 10px;
-}
-
-#errorIndicator{
+  }
+  
+  #quizHolder button:hover{
+    background-color: #613a8d;
+  }
+  
+  #scoreIndicator, #errorIndicator{
     border-top: 1px solid #999;
-    font-size: large;
+    color: #41275e;
+    font-size: 1.3em;
+    margin: 0;
     font-style: italic;
+    font-weight:700;
     margin: 10px auto;
-}
-
-#highScores{
-    padding: 5px;
-    font-size: large;
-}
-
-#highScores div:nth-child(odd)
-{
-    background-color: #efe6f9;
-}
-
-#highScores button{
-    margin: 5px;
-}
-
-
-
+  }
+  
+  #scoreIndicator p, #errorIndicator p{
+  margin:0;
+  margin-top:10px;
+  }
+  
+  #records input, #records button{
+  margin-top:5px;
+  }
+  
+  .hide{
+    display:none;
+  }
+  
+  .invisible{
+    visibility:hidden;
+  }
+  
+  .disable{
+  pointer-events:none;
+  }
+  
+  
+  
+  @media only screen and (min-width: 768px) {
+  
+    #positionWrapper{
+      min-height: calc(100% - 82px)
+    }
+  
+    #finish #records{
+      display:flex;
+      align-items: center;
+    }
+  
+    #finish #records input, #finish #records button{
+      margin-left:10px;
+    }
+  
+    #info{
+      flex-direction:row;
+    }
+  
+    #quizHolder{
+      min-width:420px;
+    }
+  
+    #quizHolder ol{
+      min-width:100%;
+    }
+  
+  }
